--- a/public/assets/css/shortcodes.css
+++ b/public/assets/css/shortcodes.css
@@ -417,7 +417,8 @@
 /* -------------------------------------- */
 .tf-card-box { 
     border-radius: 20px;
-    background: #1E0F3B;
+    background: #181818;
+    
     padding: 12px 12px 17px 12px;
     margin-bottom: 40px;
     -webkit-transition: all 0.2s ease;
@@ -430,7 +431,9 @@
 
 
 .tf-card-box:hover {
-    transform: translateY(-10px);
+    transform: translateY(-10px);  
+    box-shadow: 0px 0px 10px 1px #e066ff;
+
 }
 
 .tf-card-box .card-media {
@@ -556,7 +559,7 @@
 }
 
 .tf-card-box.style-1 .card-media img {
-    width: 235px;
+    width: 280px;
     height: 244px;
 }
 
@@ -1063,7 +1066,7 @@
 .side-bar .widget {
     margin-bottom: 30px;
     padding: 20px;
-    background-color: #1E0F3B;
+    background-color: #181818;
     border-radius: 20px;
 }
 
@@ -3475,7 +3478,7 @@ form label i.icon-star.active {
 
 #market-header {
     position: absolute;
-    left: 330px;
+    left: 300px;
     right: 120px;
     top: -90px;
     padding-top: 40px;
@@ -3585,18 +3588,32 @@ form label i.icon-star.active {
     padding: 70px 20px;
     overflow: hidden;
     background: linear-gradient(#181818, #181818) padding-box,
-      linear-gradient(290deg, transparent 6%, #e81cff, #40c9ff) border-box;
+      linear-gradient(270deg, transparent 50%, #e81cff, #40c9ff) border-box;
     border: 2px solid transparent;
     transition: all 0.4s ease-in-out;
     font-size: 16px;
     width: 300px;
     z-index: 100; /* Ensure a higher z-index */
-    
-    
+   
 }
+
+
 .admin_active .popup-cart .avatar_popup.visible {
     right: 0; /* Move in from the right when visible */
 
+}
+
+.admin_active .popup-cart .avatar_popup .close-button {
+    position: absolute;
+    top: 10px;
+    right: -10px;
+    cursor: pointer;
+    color: #fff;
+    font-size: 18px;
+}
+
+.admin_active .popup-cart .avatar_popup .close-button:hover {
+    color: #cd4eff; /* Change color on hover */
 }
 
 .admin_active .popup-cart .avatar_popup .proceed-to-checkout {
@@ -3754,13 +3771,14 @@ form label i.icon-star.active {
 }
 
 .content-tabs .wrapper-content .inner-content {
-    max-width: 1100px;
+    max-width: 1250px;
     width: 100%;
     -webkit-transition: all 0.5s linear;
     -moz-transition: all 0.5s linear;
     -ms-transition: all 0.5s linear;
     -o-transition: all 0.5s linear;
     transition: all 0.5s linear;
+    margin-left: -20px;
 }
 
 .content-tabs .side-bar {
@@ -4909,9 +4927,12 @@ img {
 
 .tf-card-box.style-6 {
     background: none;
-    padding: 0 7.5px;
+    padding: 0 0px;
     margin-top: 19px;
     margin-bottom: 50px;
+    width: 300px;
+    position: relative;
+    margin-left: 50px;
 }
 
 .tf-card-box.style-7 {
