--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1785,9 +1785,11 @@ a:focus {
     display: flex;
     flex-direction: column;
     gap: 30px;
-    background: rgb(30, 15, 59);
-    width: 281px;
-    padding: 40px 0px;
+    background: linear-gradient(#181818, #181818) padding-box,
+      linear-gradient(80deg, transparent 60%, #e81cff, #40c9ff) border-box;
+    border: 2px solid transparent;
+    width: 220px;
+    padding: 50px 0px;
     z-index: 30;
     -webkit-transition: all 0.5s linear;
     -moz-transition: all 0.5s linear;
@@ -1829,7 +1831,7 @@ a:focus {
 }
 
 .section-menu-left .list-menu > ul > li {
-    font-size: 15px;
+    font-size: 14px;
     font-weight: 800;
     line-height: 20px;
     text-transform: capitalize;
@@ -2035,7 +2037,7 @@ a:focus {
 
 .section-menu-left ul.menu-tab li {
     color: #FFF;
-    font-size: 16px;
+    font-size: 14px;
     font-weight: 500;
     line-height: 22px;
     margin-bottom: 6px;
@@ -2060,7 +2062,7 @@ a:focus {
     content: "";
     top: 50%;
     left: 0;
-    background-color: #7a30ac;
+    background-color: #3074ac;
     border-radius: 999px;
     transform: translate(-50%, -50%);
     -webkit-transition: all 0.3s ease;
@@ -2553,7 +2555,7 @@ body.background-white .tf-mouse-outer {
 /* XP BAR */
 
 #account-bar-wrapper{
-    position:absolute;
+    position:relative;
     top:0px;
     left:0px;
     bottom: 10px;
@@ -2565,29 +2567,31 @@ body.background-white .tf-mouse-outer {
     max-width:966px;
     height:100%;
     margin:0px auto;
+
   }
   
   #account-bar-name{
-    font-size:30px;
+    font-size:20px;
     margin:15px 15px 0px 15px;
     display:inline-block;
     vertical-align:bottom;
   }
   
   #account-bar-level{
-    font-size:30px;
+    font-size:16px;
     display:inline-block;
     margin:15px 15px 0px 15px;
   }
   
   #account-bar-next-level{
     display:inline-block;
-    font-size:25px;
+    font-size:16px;
     margin-left: 2%;
+
   }
   
   #xp-bar{
-    height:10px;
+    height:7px;
     width:75%;
     background:#035;
     margin:0px 0px 0px 15px;
@@ -2604,18 +2608,7 @@ body.background-white .tf-mouse-outer {
     text-align:right;
   }
   
-  #doit-btn{
-    margin:100px 0px 0px 0px;
-  }
-  
-  .btn{
-    display:inline-block;
-    padding:5px;
-    height:25px;
-    background:#ffffff;
-    cursor:pointer;
-  }
-  
+
   #xp-increase-fx{
     position:relative;
     display:none;
@@ -2647,6 +2640,108 @@ body.background-white .tf-mouse-outer {
   }
   
   .xp-increase-glow3{
+    position:absolute;
+    margin:0px 0px 0px -5px;
+    left:0px;
+    top:0px;
+    background:#fff;
+    width:10px;
+    height:100%;
+    border-radius:5px;
+    -webkit-filter:blur(5px);
+  }
+
+  /* BATTLE PASS XP BAR */
+
+#account-bar-wrapper2{
+    position:relative;
+    top:0px;
+    left:0px;
+    bottom: 0px;
+    width:100%;
+    height:100px;
+  }
+  
+  #account-bar2{
+    position:relative;
+    top:0px;
+    left:0px;
+    bottom: 0px;
+    width:7%;
+    height:100px;
+
+  }
+  
+  #account-bar-name2{
+    font-size:20px;
+    margin:15px 15px 0px 15px;
+    display:inline-block;
+    vertical-align:bottom;
+  }
+  
+  #account-bar-level2{
+    font-size:26px;
+    display:inline-block;
+    margin:15px 15px 0px 15px;
+  }
+  
+  #account-bar-next-level2{
+    display:inline-block;
+    font-size:16px;
+    margin-left: 2%;
+
+  }
+  
+  #xp-bar2{
+    height:7px;
+    width: 120%;
+    background:#035;
+    margin:0px 0px 0px 15px;
+    display:inline-block;
+    vertical-align:middle;
+  }
+  
+  #xp-bar-fill2{
+    height:100%;
+    width:0.1%;
+    background:#3af;
+    font-size:12px;
+    line-height:10px;
+    text-align:right;
+  }
+  
+
+  #xp-increase-fx2{
+    position:relative;
+    display:none;
+    height:100%;
+  }
+  
+  .xp-increase-glow12{
+    position:absolute;
+    margin:0px 0px 0px -2px;
+    left:0px;
+    top:0px;
+    background:#fff;
+    width:5px;
+    height:100%;
+    border-radius:0px;
+    -webkit-filter:blur(2px);
+  }
+  
+  .xp-increase-glow22{
+    position:absolute;
+    margin:-5px 0px 0px -2px;
+    left:0px;
+    top:0px;
+    background:#aaf;
+    width:5px;
+    height:200%;
+    border-radius:0px;
+    -webkit-filter:blur(10px);
+  }
+  
+  .xp-increase-glow32{
     position:absolute;
     margin:0px 0px 0px -5px;
     left:0px;
