--- a/public/assets/css/shortcodes.css
+++ b/public/assets/css/shortcodes.css
@@ -123,8 +123,6 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
-    background-color: rgba(22, 22, 22, 1);
-    background-image: url(../images/backgroup-section/Ninja17.png);
     margin-bottom: 30px;
 }
 
@@ -3063,7 +3061,7 @@
     top: 0;
     left: 0;
     content: '';
-    background: linear-gradient(180deg, #161616 0%, rgba(22, 22, 22, 0.00) 100%);
+    background: linear-gradient(180deg, #1c0f20 0%, rgba(22, 22, 22, 0) 100%);
 }
 
 .flat-pages-title-home7::before {
@@ -3073,7 +3071,7 @@
     bottom: 0;
     left: 0;
     content: '';
-    background: linear-gradient(0deg, #161616 0%, rgba(22, 22, 22, 0.00) 100%);
+    background: linear-gradient(0deg, #1c0f20 0%, rgba(22, 22, 22, 0.00) 100%);
 }
 
 .flat-pages-title-home7 .content {
