--- a/public/assets/css/shortcodes.css
+++ b/public/assets/css/shortcodes.css
@@ -62,6 +62,16 @@
     max-width    : 100%;
     
 }
+.themesflat-container3 {
+    position     : relative;
+    margin-left  : auto;
+    margin-right : auto;
+    padding-right: 15px;
+    padding-left : 15px;
+    width        : 1340px;
+    max-width    : 100%;
+    
+}
 
 .themesflat-container.w1490 {
     width: 1520px;
