--- a/public/assets/css/shortcodes.css
+++ b/public/assets/css/shortcodes.css
@@ -2612,6 +2612,188 @@
     border-radius: 0;
 }
 
+
+
+/* home-8 */
+.flat-pages-title-home8 {
+    overflow: hidden;
+    margin-top: -100px;
+    margin-bottom: 20px;
+}
+
+.flat-pages-title-home8 .tf-bg-line {
+    position: absolute;
+    width: 100%;
+    height: 800px;
+    content: "";
+    bottom: 0px;
+    left: 0;
+    background-image: url(../images/backgroup-section/samurai\ \(7\).jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    z-index: -1;
+}
+
+.flat-pages-title-home8::after {
+    position: absolute;
+    width: 100%;
+    height: 130px;
+    top: 0;
+    left: 0;
+    content: '';
+    background: linear-gradient(180deg, #200f0f 0%, rgba(22, 22, 22, 0) 100%);
+}
+
+.flat-pages-title-home8::before {
+    position: absolute;
+    width: 100%;
+    height: 130px;
+    bottom: 0;
+    left: 0;
+    content: '';
+    background: linear-gradient(0deg, #200f0f 0%, rgba(22, 22, 22, 0) 100%);
+}
+
+.flat-pages-title-home8 .content {
+    margin-top: 131px;
+    margin-bottom: 215px;
+    text-align: start;
+    padding-left: 8px;
+}
+
+.flat-pages-title-home8 .content h1 {
+    max-width: 800px;
+    font-size: 90px;
+    font-weight: 800;
+    line-height: 61px;
+    margin-bottom: 20px;
+}
+
+.flat-pages-title-home8 .content p {
+    margin-left: unset;
+    margin-right: unset;
+    max-width: 435px;
+    margin-bottom: 40px;
+}
+
+.flat-pages-title-home8 .icon-background .item1 {
+    top: 171px;
+    left: -250px;
+    z-index: -1;
+    animation: move1 7s infinite linear ;
+}
+
+.flat-pages-title-home8 .icon-background .item2 {
+    top: 328px;
+    left: -169px;
+    z-index: -1;
+    animation: flicker 3s infinite linear alternate;
+    animation-delay: 0.5s;
+}
+
+.flat-pages-title-home8 .icon-background .item3 {
+    top: 165px;
+    left: -86px;
+    z-index: -1;
+    animation: flicker 3s infinite linear alternate;
+    animation-delay: 1s;
+}
+
+.flat-pages-title-home8 .icon-background .item4 {
+    bottom: 216px;
+    left: -30px;
+    z-index: -1;
+    animation: movedown 3s infinite linear alternate;
+}
+
+.flat-pages-title-home8 .icon-background .item5 {
+    top: 81px;
+    left: 85px;
+    z-index: -1;
+    animation: rotate360 1.5s infinite linear;
+}
+
+.flat-pages-title-home8 .icon-background .item6 {
+    bottom: 173px;
+    left: 170px;
+    z-index: -1;
+    animation: flicker 3s infinite linear alternate;
+    animation-delay: 1.5s;
+}
+
+.flat-pages-title-home8 .icon-background .item7 {
+    bottom: 95px;
+    left: 264px;
+    z-index: -1;
+    animation: moveleft 3s infinite linear;
+}
+
+.flat-pages-title-home8 .icon-background .item8 {
+    bottom: 300px;
+    left: 460px;
+    z-index: -1;
+    animation: flicker 3s infinite linear alternate;
+    animation-delay: 2s;
+}
+
+.flat-pages-title-home8 .icon-background .item9 {
+    top: 109px;
+    right: -293px;
+    z-index: -1;
+    animation: flicker 3s infinite linear alternate;
+    animation-delay: 2.5s;
+}
+
+.flat-pages-title-home8 .icon-background .item10 {
+    top: 249px;
+    right: -336px;
+    z-index: -1;
+    animation: rotate360 1.5s infinite linear;
+}
+
+.bg-home8 {
+    width: 825px;
+    height: 622px;
+    transform: rotate(-25deg);
+    display: flex;
+    gap: 30px;
+    position: absolute; 
+    right: -241px;
+    top: 0;
+    z-index: -1;
+}
+
+.bg-home8 .swiper-container {
+    overflow: unset;
+}
+
+.bg-home8 .swiper-container .swiper-wrapper {
+    transition-timing-function: linear !important;
+}
+
+.bg-home8 .swiper-container .swiper-slide {
+    height: auto;
+}
+
+.bg-home8  img {
+    width: 255px;
+    height: 384px;
+} 
+
+.box-icon-wrap {
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    grid-gap: 2px;
+    margin-top: 2px;
+    border-radius: 0 0 20px 20px;
+    overflow: hidden;
+}
+
+.box-icon-wrap .tf-box-icon {
+    border-radius: 0;
+}
+
 /* counter */
 .counter__body {
     display: grid;
