--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -3329,3 +3329,120 @@ button-specific:hover {
     box-sizing: border-box;
     border-radius: 16px;
 }
+
+/* SideBar*/
+
+.app-container {
+    display: flex; /* Establishes a flex container */
+    flex-direction: row; /* Aligns children (sidebar & content) in a row */
+    min-height: 100vh; /* Ensures the container fills the viewport height */
+}
+
+.main-content {
+    margin-left: 220px; /* Sidebar width + padding */
+    overflow-y: auto; /* Allows scrolling within the main content area */
+    padding-top: 20px; /* Align the top padding with the sidebar's top */
+    padding-bottom: 20px; /* Align the bottom padding with the sidebar's bottom */
+    box-sizing: border-box; /* Includes padding in the element's total height */
+}
+
+
+/* General Resets for Link */
+a {
+    color: inherit;
+    text-decoration: none;
+  }
+  
+/* Sidebar Enhancements */
+.side-bar2 {
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    width: 220px;
+    overflow-y: auto;
+    background: linear-gradient(180deg, #161616 0%, #570000 100%);
+    color: white;
+    padding: 15px;
+    box-sizing: border-box;
+    z-index: 100000000000000000;
+  }
+  
+  .side-bar2 a {
+    color: white;
+    transition: color 0.3s ease;
+  }
+  
+  .side-bar2 a:hover {
+    color: #f14e4e;
+  }
+  
+  .title-widget2 {
+    font-size: 24px;
+    color: #FFF;
+    margin-bottom: 30px;
+    padding-bottom: 10px;
+    border-bottom: 2px solid #FFF;
+  }
+  
+  /* Interactive Element Styles */
+  .widget-history2 {
+    flex-grow: 1;
+    background-color: #161616; /* Dark background for contrast */
+    border-radius: 10px;
+    margin: 20px 0;
+    padding: 8px;
+    overflow-y: auto;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    overflow-y: auto;
+    scrollbar-width: none; /* For Firefox */
+  }
+  .widget-history2::-webkit-scrollbar {
+    display: none; /* For WebKit browsers like Chrome and Safari */
+}
+  
+  .widget-creators-item2 {
+    background: #900D0D; /* Dark red for items */
+    color: #FFF;
+    margin-bottom: 15px;
+    padding: 10px;
+    border-radius: 5px;
+    transition: transform 0.2s ease;
+    
+  }
+  
+  .widget-creators-item2:hover {
+    transform: scale(1.03);
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+  }
+  
+  .author2 img {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    border: 2px solid #f14e4e; /* Red accent border */
+  }
+  
+  .info2 h6, .info2 span {
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+  
+  .info2 h6 {
+    font-size: 16px;
+    font-weight: bold;
+  }
+  
+  .info2 span {
+    font-size: 14px;
+    color: #FFD700; /* Gold color for price */
+  }
+  
+  .time2 {
+    font-size: 12px;
+    color: #ccc;
+    float: right;
+  }
+  
