--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -3410,7 +3410,8 @@ a {
     padding: 10px;
     border-radius: 5px;
     transition: transform 0.2s ease;
-    
+    animation: slideIn 0.5s ease-out;
+
   }
   
   .widget-creators-item2:hover {
