Web layout ready now add games and tiers

--- a/public/assets/css/shortcodes.css
+++ b/public/assets/css/shortcodes.css
@@ -4488,7 +4488,7 @@ img {
 
 /* infor-product */
 .infor-product > .text {
-    color: #9900ff;
+    color: #06F7FF;
     font-size: 14px;
     font-weight: 800;
     line-height: 19px;
